--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
     <table>
       <thead>
         <tr>
-          <th colspan="2">ID</th>
-          <th colspan="2">item</th>
-          <th colspan="2">genre</th>
+          <th colspan="2">genre_id</th>
+          <th colspan="2">title</th>
+          <th colspan="2">tracks</th>
+          <th colspan="2">parent</th>
           <th colspan="2"></th>
         </tr>
       </thead>
@@ -56,9 +57,10 @@
     <table>
       <thead>
         <tr>
-          <th colspan="2">ID</th>
-          <th colspan="2">item</th>
-          <th colspan="2">genre</th>
+          <th colspan="2">genre_id</th>
+          <th colspan="2">title</th>
+          <th colspan="2">tracks</th>
+          <th colspan="2">parent</th>
           <th colspan="2"></th>
         </tr>
       </thead>
@@ -78,6 +80,7 @@
   <script>
 
     var trackList = [];
+
     async function loadAllTracks() {
       var item = document.getElementById("searchByItem").value;
       var genre = document.getElementById("searchByGenre").value;
@@ -92,10 +95,11 @@
           data.forEach(element => {
             htmlData +=
               `<tr>
-                   <td> ${element.ID}</td>     
-                   <td> ${element.genre}</td>     
-                   <td> ${element.item}</td>     
-                   <td> <input type="button" onclick="addToFavorit(${element.ID})" value="add to fa" /></td>     
+                   <td> ${element.genre_id}</td>     
+                   <td> ${element.tracks}</td>     
+                   <td> ${element.title}</td>  
+                   <td> ${element.parent}</td>   
+                   <td> <input type="button" onclick="addToFavorit(${element.genre_id})" value="add to fa" /></td>     
           </tr>`;
           })
           var resultArea = document.getElementById("resultArea");
@@ -107,7 +111,7 @@
 
     }
     function addToFavorit(id) {
-      var data = { ID: id }
+      var data = { genre_id: id }
       let fetchData = {
         method: 'POST',
         body: JSON.stringify(data),
@@ -119,7 +123,7 @@
 
     }
     function removefromFavorit(id) {
-      var data = { ID: id }
+      var data = { genre_id: id }
       let fetchData = {
         method: 'POST',
         body: JSON.stringify(data),
@@ -140,10 +144,11 @@
           data.forEach(element => {
             htmlData +=
               `<tr>
-           <td> ${element.ID}</td>     
-           <td> ${element.genre}</td>     
-           <td> ${element.item}</td>     
-           <td> <input type="button" onclick="removefromFavorit(${element.ID})" value="remove from favorits" /></td>   
+           <td> ${element.genre_id}</td>     
+           <td> ${element.tracks}</td>     
+           <td> ${element.title}</td> 
+           <td> ${element.parent}</td>    
+           <td> <input type="button" onclick="removefromFavorit(${element.genre_id})" value="remove from favorits" /></td>   
              
   </tr>`;
           });
